--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=latin,cyrillic" rel="stylesheet">
    <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
-  <title>Glassy</title>
-</head>
+  <title>Glassy</title></head>
 <body>
   <header class="main-header">
     <nav class="main-navigation">
@@ -30,12 +29,12 @@
           </ul>
         </li>
       
-        <li><a class="nav-item" href="delivery.html">Доставка и оплата</a></li>
-        <li><a class="nav-item" href="about.html">О нас</a></li>
+        <li><a class="nav-item" href="#">Доставка и оплата</a></li>
+        <li><a class="nav-item" href="#">О нас</a></li>
       </ul>
       <ul class="user-navigation">
         <li>
-          <a class="user-navigation-item user-navigation-search "  href="search.html">
+          <a class="user-navigation-item user-navigation-search "  href="#">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17" viewBox="0 0 17 17"><path fill="#fff" d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/></svg>
             <section class="modal modal-search">
               <form class="modal-form form-search" action="#" method="post">
@@ -294,9 +293,9 @@
       </div>
     </div>
 
-    <section class="map">
+    <section class="map" id="map">
       <h2 class="visually-hidden">Местоположение магазина</h2>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1992.7597430846058!2d30.3440769!3d60.0356354!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696352af2654caf%3A0x20078dd98a3325b1!2z0JDRgtC10LvRjNC1!5e0!3m2!1sru!2sru!4v1665403522669!5m2!1sru!2sru" width="1200" height="430" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1992.7597430846058!2d30.3440769!3d60.0356354!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696352af2654caf%3A0x20078dd98a3325b1!2z0JDRgtC10LvRjNC1!5e0!3m2!1sru!2sru!4v1665403522669!5m2!1sru!2sru" width="1200" height="430" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
       <img class="map-pin" src="svg/pin.svg" alt="">
       <div class="map-address">
         <p>
@@ -387,6 +386,6 @@
     </section>
 
   </main>
-  <script src="app.js"></script>
+
 </body>
 </html>
